# CUDA-Path-Tracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Scenes/: cornell.json  pbr_ior.json  pbr_metallic.json  sphere.json
Scenes/cube/: cube.gltf  cube.json
Scenes/helmet/: helmet.json
Scenes/helmet/sphere/: sphere.gltf
Scenes/party/: party.json
Scenes/teapot/: teapot.gltf  teapot.json  teapot_old.json
scripts/: armadillo.py
src/: CudaUtils.h  GLTFModel.cpp  GLTFModel.h  Intersections.cu  Intersections.h  Light.h  MathUtils.cu  MathUtils.h  PathTracer.cpp  PathTracer.cu  PathTracer.h  PathTracerApplication.cpp  PathTracerApplication.h  Samplers.h  SceneView.cu  SceneView.h  Shape.h  Texture.h  VkUtils.h  VulkanRenderer.cpp  VulkanRenderer.h  application.cpp  application.h  bvh.cpp  bvh.h  camera.cpp  camera.h  discrete_sampler.cpp  discrete_sampler.h  exception.h  film.h  geometry.h  image.cpp  image.h  main.cpp  main.cu  material.h  platform.cpp  platform.h  platform_select.h  (+7 more)
src/Materials/: Lambertian.h  MetallicRoughness.h  PerfectDielectric.h  PerfectMirror.h  RoughDielectric.h  common.h
src/kernel/: bsdf.h  camera.h  device_scene.h  device_types.h  intersection.h  light.h  sampler.h  texture.h
src/kernel/bsdf/: common.h  lambertian.h  metallic_roughness.h  perfect_dielectric.h  perfect_mirror.h
src/kernel/integrators/: common.h  debug.cu  debug.h  integrator.h  path_trace.cu  path_trace.h
src/kernel/sampler/: independent.h  sobol.h
src/math/: aabb.h  color.h  constants.h  geometry.h  hash.h  intersection.h  math.h  ray.h  sampling.h  spectrum.h  tonemap.h  transform.cpp  transform.h
src/mesh/: gltf_model.cpp  gltf_model.h  mesh.h  wavefront_obj.cpp  wavefront_obj.h
src/platform/: platform.cpp  platform.h  platform_select.h
src/utils/: cl_happy.h  color.cpp  color.h  cuda_utils.h  device_buffer.h  memory_arena.h  stack.h  stopwatch.h  utils.h  vk_utils.h
